# trail-lines-asi-plugin

./: CMakeLists.txt
cmake/: FindDirectX9.cmake
src/: CMain.cpp  CMain.h  CPed.cpp  CPed.h  CRender.cpp  CRender.h  CToggle.cpp  CToggle.h  CTrail.cpp  CTrail.h  dllmain.cpp  dllmain.h
src/direct3d9/: CDirect3DData.cpp  CDirect3DData.h  d3drender.cpp  d3drender.h  proxyIDirect3D9.cpp  proxyIDirect3D9.h  proxyIDirect3DDevice9.cpp  proxyIDirect3DDevice9.h
